--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 title: John Doe # your name (or website title) here
-logo: "/images/pic.PNG?raw=true" # your photo (or logo) here
+logo: "/images/pict.PNG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Empowering teams with data-driven solutions ∈ {machine learning ∪ statistics ∪ financial analysis ∪ management sciences} 
+  <br>
+  Advocate of independent thinking and radical transparency
   <br><br>
-  Second description 
-  <br><br>
-  <a href="https://www.linkedin.com/in/albert-ding/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/albert-ding/">View My LinkedIn Profile</a>   <br><br>
+  <a href="https://www.github.com/aldingsgit/">View My Github Profile</a>
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
