--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: John Doe # your name (or website title) here
+title: Albert Ding # your name (or website title) here
 logo: "/images/pict.PNG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Empowering teams with data-driven solutions ∈ {machine learning ∪ statistics ∪ financial analysis ∪ management sciences} 
