--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Albert Ding # your name (or website title) here
 logo: "/images/pict.PNG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Empowering teams with data-driven solutions ∈ {machine learning ∪ statistics ∪ financial analysis ∪ management sciences} 
+  Empowering teams with data-driven solutions  
   <br>
-  Advocate of independent thinking and radical transparency
+  ∈ {machine learning ∪ statistics ∪ financial analysis ∪ management sciences}
   <br><br>
   <a href="https://www.linkedin.com/in/albert-ding/">View My LinkedIn Profile</a>   <br><br>
   
