--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>
   ∈ {machine learning ∪ statistics ∪ financial analysis ∪ management sciences}
   <br><br>
-  <a href="https://www.linkedin.com/in/albert-ding/">View My LinkedIn Profile</a>   <br><br>
+  <a href="https://www.linkedin.com/in/albert-ding/">View My LinkedIn Profile</a>
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
