--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 title: Albert Ding # your name (or website title) here
 logo: "/images/pict.PNG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Empowering teams with data-driven solutions S such that S ∈ {machine learning ∪ statistics ∪ financial analysis ∪ management sciences}
+  Empowering teams with data-driven solutions S such that: 
+  <br>
+  S ∈ {machine learning ∪ statistics ∪ financial analysis ∪ management sciences}
   <br><br>
   <a href="https://www.linkedin.com/in/albert-ding/">View My LinkedIn Profile</a>
   
