--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/pict.PNG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Empowering teams with data-driven solutions S such that: 
   <br>
-  S ∈ {machine learning ∪ statistics ∪ financial analysis ∪ management sciences}
+  S ∈ {statistics ∪ finance ∪ management science}
   <br><br>
   <a href="https://www.linkedin.com/in/albert-ding/">View My LinkedIn Profile</a>
   
