--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Albert Ding # your name (or website title) here
 logo: "/images/pict.PNG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Empowering teams with data-driven solutions ∈ {machine learning ∪ statistics ∪ finance ∪ management sciences} 
+  Empowering teams with data-driven solutions at the union of ML/statistics, finance, and strategy 
   <br><br>
   <a href="/pdf/Ding.A_Resume.pdf">View My Resume</a>
   <br><br>
