--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,6 @@ description: > # your text below (remove <br> elements if you don't need line br
   <a href="/pdf/Ding.A_Resume.pdf">View My Resume | </a>
   <br><br>
   <a href="https://www.linkedin.com/in/albert-ding/">View My LinkedIn Profile</a>
-  
+
+theme: jekyll-theme-cayman  
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
