--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Albert Ding # your name (or website title) here
-logo: "/images/pict.PNG?raw=true" # your photo (or logo) here
+logo: "/images/pict.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Empowering teams with data-driven solutions ∈ {ML/stats ∪ Finance ∪ Strategy}
+  Empowering teams with data-driven solutions ∈ {ML ∪ Finance ∪ Strategy} 
   <br><br>
-  <a href="/pdf/Ding.A_Resume.pdf">View My Resume | </a>
+  [View My Resume](/pdf/Ding.A_Resume.pdf)
   <br><br>
-  <a href="https://www.linkedin.com/in/albert-ding/">View My LinkedIn Profile</a>
-
-theme: jekyll-theme-minimal  
+  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  
+theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
