--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Albert Ding # your name (or website title) here
 logo: "/images/profile.PNG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Empowering teams with data-driven solutions ∈ {ml ∪ finance ∪ strategy} 
+  Musings ∈ {data ∪ ml ∪ finance ∪ strategy} 
   <a href="/pdf/Ding.A_Resume.pdf">View My Resume
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
