--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/profile.PNG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Musings ∈ {data ∪ ml ∪ finance ∪ strategy} 
   <br><br>
- <a href="/pdf/Ding.A_Resume.pdf">View My Resume
+  <a href="/pdf/Ding.A_Resume.pdf">View My Resume</a> 
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
