--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 title: Albert Ding # your name (or website title) here
 logo: "/images/profile.PNG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Musings of a third culture millenial ∈ {data ∪ ml ∪ finance ∪ strategy}: 
-  <br><br>
+  Musings of a third culture millenial (m): 
+  m ∈ {data ∪ ml ∪ finance ∪ strategy}: 
+  <br>
   <a href="/pdf/Ding.A_Resume.pdf">View My Resume</a> 
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
