--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Albert Ding # your name (or website title) here
 logo: "/images/profile.PNG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Musings of a third culture millenial (m): 
-  m ∈ {data ∪ ml ∪ finance ∪ strategy}: 
+  m ∈ {data ∪ ml ∪ finance ∪ strategy} 
   <br>
   <a href="/pdf/Ding.A_Resume.pdf">View My Resume</a> 
   <br><br>
