--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   Musings (m) of a third culture millenial: 
   m ∈ {data ∪ ml ∪ finance ∪ strategy} 
   <br>
-  <a href="/pdf/Ding.A_Resume.pdf">View My Resume</a> 
+  <a href="/pdf/Ding.A_Resume - Copy.pdf">View My Resume</a> 
   <br><br>
   <a href="www.linkedin.com/in/albert-ding">View My LinkedIn Profile</a> 
   
