--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Albert Ding # your name (or website title) here
 logo: "/images/profile.PNG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Musings (m) of a third culture millenial: 
-  m ∈ {data ∪ ml ∪ finance ∪ strategy} 
+  Musings (M) of a third culture millenial: 
+  M ∈ {data ∪ ML ∪ finance ∪ strategy} 
   <br>
   <a href="/pdf/Ding.A_Resume - Copy.pdf">View My Resume</a> 
   <br><br>
