--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   Musings (M) of a third culture millenial: 
   M ∈ {data ∪ ML ∪ finance ∪ strategy} 
   <br>
-  <a href="/pdf/Ding.A_Resume - Copy.pdf">View My Resume</a> 
+  <a href="/pdf/Ding.A_Resumev2.pdf">View My Resume</a> 
   <br><br>
   <a href="https://www.linkedin.com/in/albert-ding">View My LinkedIn Profile</a> 
   
