--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Albert Ding # your name (or website title) here
 logo: "/images/profile.PNG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Musings ∈ {data ∪ ML ∪ finance ∪ strategy U misc.} 
+  Musings ∈ {data ∪ ML ∪ finance ∪ strategy U miscellaneous} 
   <br>
   <a href="/pdf/Ding.A_Resumev2.pdf">View My Resume</a> 
   <br><br>
