--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,9 @@ title: Albert Ding # your name (or website title) here
 logo: "/images/profile.PNG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Musings ∈ {data ∪ ML ∪ finance ∪ strategy U miscellaneous} 
-  <br>
-  <a href="/pdf/Ding.A_Resumev2.pdf">View My Resume</a> 
   <br><br>
-  <a href="https://www.linkedin.com/in/albert-ding">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/albert-ding">LinkedIn |<a>
+  <a href="/pdf/Ding.A_Resumev2.pdf"> Resume</a>  
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
