--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   Musings ∈ {data ∪ ML ∪ finance ∪ strategy U miscellaneous} 
   <br><br>
   <a href="https://www.linkedin.com/in/albert-ding">LinkedIn |<a>
-  <a href="/pdf/Ding.A_Resumev2.pdf"> Resume</a>  
+  <a href="/pdf/Ding.A_Resume.pdf"> Resume</a>  
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
